add /hello
